--- a/style.css
+++ b/style.css
@@ -79,19 +79,10 @@ section{
 body{
     background-color: #0B2A3B;
 }
-#about{
-    column-count:3;
-}
-#pool{
-    column-count: 1;
-}
-#sauna{
-    column-count: 3;
-}
-#aboutphoto{
-    column-count: 2;
+#inabout{
+    display: flex;
+    justify-content: space-between;
 }
 #aboutus{
     color: white;
-    column-count: 1;
 }
