--- a/style.css
+++ b/style.css
@@ -84,5 +84,8 @@ body{
     justify-content: space-between;
 }
 #aboutus{
-    color: white;
+    color: #0B2A3B;
+    background-color:blanchedalmond;
+    border-radius: 20px;
+    padding: 30px;
 }
