--- a/style.css
+++ b/style.css
@@ -84,14 +84,19 @@ body{
 }
 #inabout{
     display: grid;
-    grid-template-columns: auto auto auto;
-    gap:10px;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap:20px;
+    row-gap: 20px;
 }
 #aboutus{
     color: #0B2A3B;
     background-color:blanchedalmond;
     border-radius: 20px;
-    padding: 30px;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    padding: 20px;
+    grid-row-start:1;
+    grid-row-end:3;
+    grid-template-rows: 250px;
+}
+#pool img{
+    border-radius: 20px;
 }
