--- a/style.css
+++ b/style.css
@@ -98,6 +98,26 @@ body{
     grid-row-end:3;
     grid-template-rows: 250px;
 }
-#pool img{
+.pics{
+    opacity: 1;
+    width: 300px;
+    height: 200px;
     border-radius: 20px;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+.middle{
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%, -50%);
+}
+#pool:hover .pics{
+    opacity: 0.3;
+}
+#pool:hover .middle{
+    opacity: 1;
 }
