--- a/style.css
+++ b/style.css
@@ -98,8 +98,12 @@ body{
     grid-row-end:3;
     grid-template-rows: 250px;
 }
+#pool{
+    position: relative;
+}
 .pics{
     opacity: 1;
+    display: block;
     width: 300px;
     height: 200px;
     border-radius: 20px;
@@ -112,8 +116,8 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%)
 }
 #pool:hover .pics{
     opacity: 0.3;
@@ -122,6 +126,6 @@ body{
     opacity: 1;
 }
 .text{
-    color:white ;
-    font-size:25px ;
+    color:blanchedalmond ;
+    font-size:20px ;
 }
