--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@ body{
     margin-top: 5cm;
     
 }
+#about h3{
+    color: #A58754;
+    font-size: 30px;
+}
 #inabout{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -93,7 +97,7 @@ body{
     color: #0B2A3B;
     background-color:blanchedalmond;
     border-radius: 20px;
-    padding: 20px;
+    padding: 30px;
     grid-row-start:1;
     grid-row-end:3;
     grid-template-rows: 250px;
@@ -115,7 +119,7 @@ body{
     opacity: 0;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 35%;
     transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%)
 }
