--- a/style.css
+++ b/style.css
@@ -72,6 +72,36 @@ section{
     opacity: 1;
     right: 0;
 }
+#inabout{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 30px;
+    align-items: center;
+}
+#about h3{
+    color: #585A3C;
+    font-size: 30px;
+}
+#aboutus{
+    position: relative;
+    width: 400px;
+    height: 300px;
+    color: #0B2A3B;
+    background-color:blanchedalmond;
+    border-radius: 20px;
+    padding: 30px;
+
+}
+#aboutphoto{
+    width: 400px;
+    height: 300px; 
+    background-image: url('exterior.jpg');
+    background-size: cover;
+    animation-name: changeImage;
+    animation-duration: 4s;
+    animation-fill-mode: forwards;
+    animation-iteration-count:infinite;
+}
 
 #first{
 
@@ -96,15 +126,7 @@ body{
     column-gap:20px;
     row-gap: 20px;
 }
-#aboutus{
-    color: #0B2A3B;
-    background-color:blanchedalmond;
-    border-radius: 20px;
-    padding: 30px;
-    grid-row-start:1;
-    grid-row-end:3;
-    grid-template-rows: 250px;
-}
+
 #pool{
     position: relative;
 }
