--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ section{
     justify-content: center;
     align-items: center;
     padding:0px 0px 0px 100px;
+    
 }
 #headline{
     position: relative;
@@ -75,8 +76,9 @@ section{
 #inabout{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 30px;
+    column-gap: 20px;
     align-items: center;
+    margin-left: 20px;
 }
 #about h3{
     color: #585A3C;
@@ -85,22 +87,35 @@ section{
 #aboutus{
     position: relative;
     width: 400px;
-    height: 300px;
+    height: 350px;
     color: #0B2A3B;
     background-color:blanchedalmond;
     border-radius: 20px;
     padding: 30px;
 
 }
+#aboutus p{
+    font-size: large;
+}
 #aboutphoto{
-    width: 400px;
-    height: 300px; 
+    width: 450px;
+    height: 400px;
+    border-radius: 30px;
+    padding: 20px; 
     background-image: url('exterior.jpg');
-    background-size: cover;
+    background-size:cover;
     animation-name: changeImage;
-    animation-duration: 4s;
+    animation-delay: 4s;
+    animation-duration: 10s;
     animation-fill-mode: forwards;
     animation-iteration-count:infinite;
+}
+@keyframes changeImage{
+    0% { background-image: url('exterior.jpg');}
+    25% { background-image: url('Kitchen.jpg');}
+    50% {background-image: url('parkmerced.jpeg');}
+    75% {background-image: url('surveillance.jpg');}
+    100% {background-image: url('pool.jpg');}
 }
 
 #first{
