--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ header{
     justify-content: space-between;
     align-items: center;
 }
+html{
+    scroll-behavior: smooth;
+}
 .logo{
     margin-left: 2cm;
 }
@@ -172,4 +175,90 @@ body{
 .text{
     color:blanchedalmond ;
     font-size:20px ;
+}
+.contact-us {
+    display: flex;
+    padding: 50px;
+    background-color: #f4f4f4;
+    align-items: center;
+}
+
+.contact-info {
+    flex: 1;
+    padding: 20px;
+}
+
+.contact-info h1 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+}
+
+.contact-info p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+}
+
+.contact-info .info {
+    margin-bottom: 20px;
+}
+
+.contact-info .info div {
+    margin-bottom: 10px;
+}
+
+.contact-info .social-media a {
+    text-decoration: none;
+    color: #555;
+}
+
+.vases-image {
+    flex: 1;
+    text-align: right;
+}
+
+.vases-image img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.get-in-touch {
+    padding: 50px;
+    text-align: center;
+    background-color: #ffffff;
+}
+
+.get-in-touch h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.get-in-touch p {
+    font-size: 1.1em;
+    margin-bottom: 30px;
+}
+
+form {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.form-group {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.form-group input, .form-group select, textarea {
+    width: 100%;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 1em;
+}
+
+textarea {
+    width: calc(100% - 30px);
+    margin: 0 15px;
+    min-height: 150px;
 }
