--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ nav a {
     text-decoration: none;
     font-size: 1.0rem;
 }
-
 nav a:hover {
     color: #A58754;
     transition: color 0.3s ease-in-out;
@@ -22,6 +21,8 @@ html{
 }
 .logo{
     margin-left: 2cm;
+    width: 10;
+    height:10;
 }
 section{
     display: flex;
