--- a/style.css
+++ b/style.css
@@ -3,19 +3,29 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 50px;
-    background-color: #0B2A3B;
+    background-color: beige;
 }
 
 nav a {
     margin-right: 20px;
-    color: white;
+    color: black;
     text-decoration: none;
-    font-size: 1.0rem;
+    font-size: 25px;
+    transition: .3s;
+    animation: slideTop 1s ease forwards;
+    animation-delay: calc(.2s*var(--i)) ;
+    opacity: 0;
+
 }
 nav a:hover {
-    color: #A58754;
+    color: palevioletred;
     transition: color 0.3s ease-in-out;
 }
+
+nav a.active{
+    color: palevioletred;
+}
+
 html{
     scroll-behavior: smooth;
 }
@@ -23,45 +33,78 @@ html{
     margin-left: 2cm;
     width: 10;
     height:10;
+    animation: slideRight 1s ease forwards;
+    opacity: 0;
 }
 section{
     display: flex;
-    justify-content: center;
     align-items: center;
     padding:0px 0px 0px 100px;
     
 }
+
+.backpic{
+    transform: translate(20%, 45%) scale(1.2) rotate(45deg);
+    z-index: -1;
+    animation: Backk 1s ease forwards;
+    animation-delay: 1.5s;
+    opacity: 0;
+
+}
+
+.backpic2{
+    transform: translate(-85%, 15%) scale(1.2) rotate(110deg);
+    z-index: -10;;
+   
+
+}
+   
+
 #headline{
     position: relative;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
+
+
 .headlinesection{
    text-wrap: nowrap;
+   text-shadow:  2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 #headline h1{
     color: #585A3C;
     font-size: 35px;
+    animation: slideBottom 1s ease forwards;
+    animation-delay: 1s;
+    opacity: 0;
 }
 #headline h3{
-    color: white;
+    color: black;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 1.3s;
+    opacity: 0;
+
 }
+
 .btn{
     display: inline-block;
     background-color: #A58754;
-    color: white;
+    color: black;
     width: 150px;
     height:50px;
     border-radius: 10px;
-    border: #A58754;
     transition: all 0.5s;
     cursor: pointer;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 1.6s;
+    opacity: 0;
+    border: 2px solid #A58754;
 }
 .btn:hover{
-    background-color: aliceblue;
-    color: #A58754;
-
+    background-color: transparent;
+    color: black;
+    transform: translateY(20px);
+    
 }
 .btn span{
     font-size: larger;
@@ -101,10 +144,11 @@ section{
     position: relative;
     width: 400px;
     height: 350px;
-    color: #0B2A3B;
+    color: black;
     background-color:blanchedalmond;
     border-radius: 20px;
     padding: 30px;
+    font-weight: bold;
 
 }
 #aboutus p{
@@ -132,56 +176,229 @@ section{
 }
 
 #first{
-
+    width: 10 00px;
+    margin: 10px auto;
+    columns: 4;
+    column-gap: 10px;
+    margin-right: 100px;
 }
+
+#first .box{
+    width: 100%;
+    margin-bottom: 10px;
+    animation: slideTop 1s ease forwards;
+    animation-delay: calc(.2s*var(--i)) ;
+    opacity: 0;
+    
+}
+
+#first .box img{
+    max-width: 100%;
+    border-radius: 15px;
+    box-shadow: 10px 2px 10px rgba(0, 0, 0, 0.3);
+    
+}
+
+
 body{
-    background-color: #0B2A3B;
+    background-color: beige;
 }
 #about{
     margin-top: 5cm;
 }
 #amenities{
     margin-top: 5cm;
+    display: block;
+    border-radius: 10px;
     
 }
 #amenities h3{
     color: #A58754;
     font-size: 30px;
+    margin-bottom: 10px;
 }
-#inamenities{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap:20px;
-    row-gap: 20px;
+.inamenities{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 1000px;
+    height: 600px;
+    background: black;
+    box-shadow: 0 10px 10px #dbdbdb;
+    margin-top: 20px; 
+    padding-top: 10px; 
+    border: black;
+    border-radius: 30px;
+    
 }
 
-#pool{
-    position: relative;
-}
-.pics{
-    opacity: 1;
-    display: block;
-    width: 300px;
-    height: 200px;
+.inamenities .slide .item{
+    width:200px;
+    height: 300px;
+    position: absolute;
+    top:50%;
+    transform: translate(0, -50%);
     border-radius: 20px;
-    transition: .5s ease;
-    backface-visibility: hidden;
+    box-shadow: 0 30px 50px;
+    background-position: 50% 50%;
+    background-size: cover;
+    display: inline-block;
+    transition: 0.5s;
+   
 }
-.middle{
-    transition: .5s ease;
+
+.slide .item:nth-child(1),
+.slide .item:nth-child(2){
+    top: 0;
+    left: 0;
+    transform: translate(0, 0);
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+
+}
+
+.slide .item:nth-child(3){
+    left: 50%;
+
+}
+
+.slide .item:nth-child(4){
+    left: calc(50% + 220px);
+    
+}
+
+.slide .item:nth-child(5){
+    left: calc(50% + 440px);
+    
+}
+
+.slide .item:nth-child(n+6){
+    left: calc(50% + 660px);
     opacity: 0;
+}
+
+.item .content{
     position: absolute;
     top: 50%;
-    left: 35%;
-    transform: translate(-50%, -50%);
-   -ms-transform: translate(-50%, -50%)
+    left: 100px;
+    width: 300px;
+    text-align: left;
+    color: #eee;
+    transform: translate(0, -50%);
+    font-family: 'Times New Roman', Times, serif;
+    display: none;
 }
-#pool:hover .pics{
-    opacity: 0.3;
+
+.slide .item:nth-child(2) .content{
+    display: block;
 }
-#pool:hover .middle{
+
+.content{
+    text-shadow: 0 0 0.25em #000000;
+}
+
+.content .name{
+    font-size: 40px;
+    text-transform: uppercase;
+    font-weight: bold;
+    opacity: 0;
+    animation: slideBottom 1s ease forwards;
+}
+
+.content .description{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+}
+
+.content button{
+    background-color: #A58754;
+    color: black;
+    width: 150px;
+    height:50px;
+    border-radius: 10px;
+    transition: all 0.5s;
+    cursor: pointer;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 0.3s;
+    opacity: 0;
+    border: 2px solid #A58754;
+}
+
+
+.content button:hover{
+    background-color: transparent;
+    color: #A58754;
+    transform: translateY(20px);
+    
+}
+.content button span{
+    font-size: larger;
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.content button span::after{
+    content: '\00bb';
+    font-size: larger;
+    position:absolute;
+    opacity: 0;
+    top: 0;
+    right: 20px;
+    transition: 0.5s;
+}
+.content button:hover span{
+    padding-right: 25px;
+}
+.content button:hover span::after{
     opacity: 1;
+    right: 0;
 }
+
+
+.button2{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+
+}
+
+.button2 button{
+    width: 40px;
+    height: 35px;
+    border-radius: 8px;
+    border: none;
+    cursor:pointer;
+    margin: 0 5px;
+    border: 1px solid antiquewhite;
+    transition: 0.3s;
+}
+
+
+.button2 button:hover{
+    background: #ababab;
+    color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.contact{
+    margin-top: 10px;
+}
+
 .text{
     color:blanchedalmond ;
     font-size:20px ;
@@ -189,14 +406,16 @@ body{
 .contact-us {
     display: flex;
     padding: 50px;
-    background-color: #f4f4f4;
+    background-color: #d3d9d4;
     align-items: center;
-    margin-top: 2cm;
+    margin-top: 20cm;
+    border-radius: 8px;
 }
 
 .contact-info {
     flex: 1;
     padding: 20px;
+    color: black;
 }
 
 .contact-info h1 {
@@ -236,7 +455,8 @@ body{
 .get-in-touch {
     padding: 50px;
     text-align: center;
-    background-color: #ffffff;
+    background-color: beige;
+    border-radius: 8px;
 }
 
 .get-in-touch h2 {
@@ -272,4 +492,94 @@ textarea {
     width: calc(100% - 30px);
     margin: 0 15px;
     min-height: 150px;
+}
+
+@keyframes slideTop{
+    0%{
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity:1;
+    }
+}
+
+@keyframes slideRight{
+    0%{
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateX(0);
+        opacity:1;
+    }
+}
+
+@keyframes slideTop{
+    0%{
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity:1;
+    }
+}
+
+@keyframes slideBottom{
+    0%{
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity:1;
+    }
+}
+
+@keyframes slideLeft{
+    0%{
+        transform: translateX(100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateX(0);
+        opacity:1;
+    }
+}
+
+@keyframes zoomOut{
+    0%{
+        transform: scale(1.1);
+        opacity: 0;
+    }
+    100%{
+        transform: scale(1);
+        opacity:1;
+    }
+}
+
+@keyframes Backk{
+    0%{
+        transform: translate(300px, -300px) scale(0) rotate(45deg);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(20%, 45%) scale(1.2) rotate(45deg);
+        opacity:1;}
+}
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav a {
+        margin: 10px 0;
+    }
+
+    #first {
+        columns: 2; /* Change column layout on smaller screens */
+    }
 }
