--- a/resident.css
+++ b/resident.css
@@ -15,7 +15,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #f8f8f8;
+    background-color: beige;
     border-bottom: 1px solid #ccc;
 }
 
@@ -73,7 +73,7 @@ main {
 }
 
 section {
-    background-color: #f9f9f9;
+    background-color: beige;
     padding: 20px;
     border: 1px solid #ddd;
     margin-bottom: 20px;
