added functional modals to support page

--- a/support-style.css
+++ b/support-style.css
@@ -179,7 +179,8 @@ footer p {
     margin: 10% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 300px;
+    width: 700px;
+    height: 400px;
     text-align: center;
     border-radius: 8px;
     position: relative;
