--- a/support-style.css
+++ b/support-style.css
@@ -5,10 +5,11 @@ body {
     padding: 0;
     background-color: beige;
     color: #000000;
+ 
 }
 
 .container {
-    height: 400px;
+    height: 625px;
 }
 
 /* Header styling */
@@ -79,8 +80,8 @@ main {
     justify-content: space-between;
     align-items: center;
     position: relative;
-    width: 240px;
-    height: 300px;
+    width: 300px;
+    height: 350px;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -89,6 +90,7 @@ main {
     color: white;
     overflow: hidden;
     transition: transform 0.2s;
+    margin-top: 60px;
 }
 
 .card::before {
@@ -130,6 +132,7 @@ button {
     font-size: 15px;
     transition: background-color 0.3s;
     position: relative;
+   left: 30px;
     z-index: 1;
 }
 
@@ -147,7 +150,7 @@ footer {
     background-color: rgb(63, 169, 63);
     text-align: center;
     padding: 20px;
-    margin-top: 350px;
+  
     font-size: 0.9em;
     color: #555;
     border-top: 1px solid #cfd8dc;
